jacoco 타겟 예외 추가 jacoco 레포트 git 예외 추가

--- a/build.gradle
+++ b/build.gradle
@@ -67,10 +67,11 @@ jacocoTestReport {
         html.required = true
         html.outputLocation = layout.projectDirectory.dir('jacocoReport')
     }
-
     afterEvaluate {
         classDirectories.setFrom(files(classDirectories.files.collect {
-            fileTree(dir: it)
+            fileTree(dir: it, exclude: [
+                    '**/SjcuSpringApplication.class'
+            ])
         }))
     }
 }
